--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,13 @@
+@import "_null";
 body {
-   background: #ccc;
+	background: url(/img/backg.jpg) 0 0/cover no-repeat;
+	font-size: 20px;
+	line-height: 150%;
+	background-color: #333;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	color: #fff;
 }
+
+@import "_header";
+@import "_main";
+@import "_footer";
