--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,12 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
 input::-ms-clear {
   display: none;
 }
@@ -90,6 +96,27 @@ body {
   color: #fff;
 }
 
+.wrapper {
+  width: 100%;
+  min-height: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+._container {
+  max-width: 1170px;
+  margin: 0 auto;
+}
+
 .header {
   background-color: transparent;
   position: fixed;
@@ -103,62 +130,94 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .menu__list li {
-  margin: 0px 15px 0px 0px;
+  margin: 0px 30px 0px 0px;
 }
 
 .menu__link {
-  color: #000;
+  color: #ffffff;
 }
 
 .menu__link._active {
   color: red;
 }
 
-/*
-//Burger
 .icon-menu {
-	display: none;
-	@media (max-width: $md3+px) {
-		display: block;
-		position: absolute;
-		top: 18px;
-		right: 10px;
-		width: 30px;
-		height: 18px;
-		cursor: pointer;
-		z-index: 5;
-		span {
-			transition: all 0.3s ease 0s;
-			top: calc(50% - 1px);
-			left: 0px;
-			position: absolute;
-			width: 100%;
-			height: 2px;
-			background-color: #000;
-			&:first-child {
-				top: 0px;
-			}
-			&:last-child {
-				top: auto;
-				bottom: 0px;
-			}
-		}
-		&._active {
-			span {
-				transform: scale(0);
-				&:first-child {
-					transform: rotate(-45deg);
-					top: calc(50% - 1px);
-				}
-				&:last-child {
-					transform: rotate(45deg);
-					bottom: calc(50% - 1px);
-				}
-			}
-		}
-	}
+  display: none;
 }
-*/
+
+@media (max-width: 767.98px) {
+  .icon-menu {
+    display: block;
+    position: absolute;
+    top: 18px;
+    right: 10px;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 5;
+  }
+  .icon-menu span {
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    top: calc(50% - 1px);
+    left: 0px;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+  }
+  .icon-menu span:first-child {
+    top: 0px;
+  }
+  .icon-menu span:last-child {
+    top: auto;
+    bottom: 0px;
+  }
+  .icon-menu._active span {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  .icon-menu._active span:first-child {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    top: calc(50% - 1px);
+  }
+  .icon-menu._active span:last-child {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    bottom: calc(50% - 1px);
+  }
+}
+
+.footer {
+  padding: 0 0 30px 0;
+}
+
+.footer__content {
+  text-align: right;
+}
+
+.btn {
+  background: #538ec5;
+  padding: 10px 10px 10px 75px;
+  border-radius: 10px;
+  color: #fff;
+  position: relative;
+}
+
+.btn::before {
+  content: "";
+  position: absolute;
+  top: -6px;
+  left: 10px;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background: url(/img/vk.png) 0 0/55px 55px;
+}
