--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,11 @@
+$minWidth: 320px;
+$maxWidth: 1920;
+$maxWidthContainer: 1170;
+$md1: $maxWidthContainer + 12;
+$md2: 991.98;
+$md3: 767.98;
+$md4: 479.98;
+
 @import "_null";
 body {
 	background: url(/img/backg.jpg) 0 0/cover no-repeat;
@@ -8,6 +16,20 @@ body {
 	color: #fff;
 }
 
+.wrapper {
+	width: 100%;
+	min-height: 100%;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+._container {
+	max-width: $maxWidthContainer + px;
+	margin: 0 auto;
+}
+
 @import "_header";
 @import "_main";
-@import "_footer";
+@import "_footer"
