Подключены скрипты радио, сделаны стили

--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,65 @@ body {
   }
 }
 
+.wrap-radio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 150px 0 0 0;
+}
+
+.info {
+  text-align: center;
+}
+
+.info__img {
+  vertical-align: baseline;
+}
+
+.player__title {
+  font-family: 'Rubik', sans-serif;
+  font-size: 150px;
+  line-height: 1;
+  margin: 0 0 45px 0;
+  text-align: center;
+}
+
+.player__radio {
+  font-size: 130px;
+}
+
+.my_player {
+  margin-left: 100px;
+}
+
+.my_player_default {
+  height: 40px !important;
+  width: 300px !important;
+}
+
+.my_player_default .my_play {
+  top: 12px !important;
+}
+
+.my_player_default .my_timer {
+  top: 15px !important;
+}
+
+.my_player_default .my_mute {
+  right: 90px !important;
+  top: 13px !important;
+}
+
+.my_player_default .my_volumediv {
+  top: 17px !important;
+  width: 70px !important;
+}
+
 .footer {
   padding: 0 0 30px 0;
 }
