--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -19,6 +19,6 @@
       width: 55px;
       height: 55px;
       border-radius: 50%;
-      background: url(/img/vk.png) 0 0/55px 55px;
+      background: url(../img/vk.png) 0 0/55px 55px;
    }
 }
