--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@ $md4: 479.98;
 
 @import "_null";
 body {
-	background: url(/img/backg.jpg) 0 0/cover no-repeat;
+	background: url(../img/backg.jpg) 0 0/cover no-repeat;
 	font-size: 20px;
 	line-height: 150%;
 	background-color: #333;
