--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,6 @@ h6 {
 }
 
 body {
-  background: url(../img/backg.jpg) 0 0/cover no-repeat;
   font-size: 20px;
   line-height: 150%;
   background-color: #333;
@@ -97,6 +96,8 @@ body {
 }
 
 .wrapper {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#200354), color-stop(#a720c2), to(#17014c));
+  background-image: linear-gradient(to bottom right, #200354, #a720c2, #17014c);
   width: 100%;
   min-height: 100%;
   overflow: hidden;
@@ -115,6 +116,7 @@ body {
 ._container {
   max-width: 1170px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 .header {
@@ -151,7 +153,7 @@ body {
   display: none;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 991.98px) {
   .icon-menu {
     display: block;
     position: absolute;
@@ -204,15 +206,32 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 150px 0 0 0;
+  padding: 150px 10px 0 10px;
 }
 
 .info {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 45%;
+          flex: 0 1 45%;
   text-align: center;
 }
 
 .info__img {
+  width: 400px;
+  height: 400px;
+  background-size: cover;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.info__icon {
   vertical-align: baseline;
+}
+
+.player {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
 }
 
 .player__title {
