--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -43,7 +43,7 @@
 //Burger
 .icon-menu {
 	display: none;
-	@media (max-width: $md3+px) {
+	@media (max-width: 991.98px) {
 		display: block;
 		position: absolute;
 		top: 18px;
