--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2,16 +2,25 @@
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
-   padding: 150px 0 0 0;
+   padding: 150px 10px 0 10px;
 }
 
 .info {
+   flex: 0 1 45%;
    text-align: center;
    &__img {
+      width: 400px;
+      height: 400px;
+      background-size: cover;
+      border-radius: 50%;
+      margin: 0 auto;
+   }
+   &__icon {
       vertical-align: baseline;
    }
 }
 .player {
+   flex: 0 1 50%;
    &__title {
       font-family: 'Rubik', sans-serif;
       font-size: 150px;
