--- a/css/style.css
+++ b/css/style.css
@@ -113,87 +113,176 @@ body {
           justify-content: space-between;
 }
 
-._container {
+.container {
   max-width: 1170px;
   margin: 0 auto;
   padding: 0 10px;
 }
 
 .header {
-  background-color: transparent;
   position: fixed;
   width: 100%;
   top: 0;
-  padding: 20px;
+  left: 0;
   z-index: 50;
 }
 
-.menu__list {
+.header:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #272727;
+  z-index: 2;
+}
+
+.header__body {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 80px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.menu__list li {
-  margin: 0px 30px 0px 0px;
+.header__logo {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 40px;
+          flex: 0 0 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+  z-index: 3;
 }
 
-.menu__link {
-  color: #ffffff;
+.header__logo img {
+  max-width: 100%;
+  display: block;
 }
 
-.menu__link._active {
-  color: red;
-}
-
-.icon-menu {
+.header__burger {
   display: none;
 }
 
-@media (max-width: 991.98px) {
-  .icon-menu {
-    display: block;
-    position: absolute;
-    top: 18px;
-    right: 10px;
-    width: 30px;
-    height: 18px;
-    cursor: pointer;
-    z-index: 5;
+.header__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  z-index: 2;
+}
+
+.header__list li {
+  list-style: none;
+  margin: 0px 0px 0px 20px;
+}
+
+.header__link {
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.header__link:hover {
+  color: #a31fbf;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+@media (max-width: 767px) {
+  body.lock {
+    overflow: hidden;
   }
-  .icon-menu span {
+  .header__body {
+    height: 50px;
+  }
+  .header__logo {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 40px;
+            flex: 0 0 40px;
+  }
+  .header__burger {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    position: relative;
+    z-index: 3;
+  }
+  .header__burger span {
+    position: absolute;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
-    top: calc(50% - 1px);
-    left: 0px;
+  }
+  .header__burger:before,
+  .header__burger:after {
+    content: "";
+    background-color: #fff;
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: #ffffff;
+    left: 0;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
   }
-  .icon-menu span:first-child {
-    top: 0px;
+  .header__burger:before {
+    top: 0;
   }
-  .icon-menu span:last-child {
-    top: auto;
-    bottom: 0px;
+  .header__burger:after {
+    bottom: 0;
   }
-  .icon-menu._active span {
+  .header__burger.active span {
     -webkit-transform: scale(0);
             transform: scale(0);
   }
-  .icon-menu._active span:first-child {
-    -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-    top: calc(50% - 1px);
-  }
-  .icon-menu._active span:last-child {
+  .header__burger.active:before {
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
-    bottom: calc(50% - 1px);
+    top: 9px;
+  }
+  .header__burger.active:after {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    bottom: 9px;
+  }
+  .header__menu {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    background-color: #a720c2;
+    padding: 70px 10px 20px 10px;
+  }
+  .header__menu.active {
+    top: 0;
+  }
+  .header__list {
+    display: block;
+  }
+  .header__list li {
+    margin: 0px 0px 20px 0px;
+  }
+  .header__link {
+    font-size: 24px;
   }
 }
 
@@ -287,11 +376,13 @@ body {
 }
 
 .btn {
-  background: #538ec5;
+  background: #ffffff;
   padding: 10px 10px 10px 75px;
   border-radius: 10px;
-  color: #fff;
+  color: #000;
   position: relative;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .btn::before {
@@ -303,6 +394,13 @@ body {
   height: 55px;
   border-radius: 50%;
   background: url(../img/vk.png) 0 0/55px 55px;
+}
+
+.btn:hover {
+  background: #9e1eba;
+  color: #fff;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 @media (max-width: 991.98px) {
