--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,7 @@ body {
 	justify-content: space-between;
 }
 
-._container {
+.container {
 	max-width: 1170px;
 	margin: 0 auto;
 	padding: 0 10px;
