--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,5 +1,5 @@
 @media (max-width: 991.98px) {
-   .info {
+   .channel-info {
       &__img {
          width: 200px;
          height: 200px;
@@ -21,7 +21,7 @@
       padding: 80px 10px 0 10px;
    }
 
-   .info {
+   .channel-info {
       flex: 0 1 100%;
    }
    .player {
