--- a/css/style.css
+++ b/css/style.css
@@ -90,27 +90,21 @@ h6 {
 body {
   font-size: 20px;
   line-height: 150%;
-  background-color: #333;
+  background: #333 url(../img/new-bg-5.jpg) 0 0/cover no-repeat fixed;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   color: #fff;
 }
 
-.wrapper {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#200354), color-stop(#a720c2), to(#17014c));
-  background-image: linear-gradient(to bottom right, #200354, #a720c2, #17014c);
+img.body__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  min-height: 100%;
-  overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
 }
 
 .container {
@@ -286,52 +280,37 @@ body {
 }
 
 .wrap-radio {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   padding: 150px 10px 0 10px;
 }
 
-.info {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 45%;
-          flex: 0 1 45%;
-  text-align: center;
+.channel-info__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.info__img {
-  width: 400px;
-  height: 400px;
+.channel-info__top-img {
+  width: 80px;
+  height: 80px;
+  border-radius: 5px;
   background-size: cover;
-  border-radius: 50%;
-  margin: 0 auto;
+  margin-right: 15px;
 }
 
-.info__icon {
-  vertical-align: baseline;
+.channel-info__title {
+  font-family: Rubik;
+  font-size: 30px;
+  font-weight: 700;
 }
 
-.player {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 50%;
-          flex: 0 1 50%;
-}
-
-.player__title {
-  font-family: 'Rubik', sans-serif;
-  font-size: 150px;
-  line-height: 1;
-  margin: 0 0 45px 0;
-  text-align: center;
-}
-
-.player__radio {
-  font-size: 130px;
+.channel-info__subtitle {
+  font-family: Arial;
+  font-size: 28px;
+  font-weight: 500;
+  opacity: 0.7;
 }
 
 .wrap-player {
@@ -403,7 +382,7 @@ body {
 }
 
 @media (max-width: 991.98px) {
-  .info__img {
+  .channel-info__img {
     width: 200px;
     height: 200px;
   }
@@ -423,7 +402,7 @@ body {
             flex-direction: column-reverse;
     padding: 80px 10px 0 10px;
   }
-  .info {
+  .channel-info {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 100%;
             flex: 0 1 100%;
