--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,20 +2,30 @@
 body {
 	font-size: 20px;
 	line-height: 150%;
-	background-color: #333;
+	background: #333 url(../img/new-bg-5.jpg) 0 0 / cover no-repeat fixed;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	color: #fff;
 }
 
-.wrapper {
-	background-image: linear-gradient(to bottom right, #200354, #a720c2, #17014c);
+img.body__bg {
+	position: absolute;
+	top: 0;
+	left: 0;
 	width: 100%;
-	min-height: 100%;
-	overflow: hidden;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	height: 100%;
+	object-fit: cover;
+	object-position: top;
 }
+
+//.wrapper {
+// background-image: linear-gradient(to bottom right, #200354, #a720c2, #17014c);
+// 	width: 100%;
+// 	min-height: 100%;
+// 	overflow: hidden;
+// 	display: flex;
+// 	flex-direction: column;
+// 	justify-content: space-between;
+// }
 
 .container {
 	max-width: 1170px;
