--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,14 +1,16 @@
 .wrap-radio {
-   // display: flex;
-   // flex-wrap: wrap;
-   // justify-content: space-between;
+   background: #000000b8;
    padding: 150px 10px 0 10px;
+   margin-top: 100px;
+   border-radius: 10px;
 }
 
 .channel-info {
+   display: flex;
    &__top {
       display: flex;
       align-items: center;
+      margin-bottom: 50px;
       &-img {
          width: 80px;
          height: 80px;
@@ -27,6 +29,13 @@
       font-size: 28px;
       font-weight: 500;
       opacity: 0.7;
+   }
+   &__img {
+      width: 300px;
+      height: 300px;
+      border-radius: 5px;
+      background-size: cover;
+      margin-right: 30px;
    }
 }
 
