--- a/css/style.css
+++ b/css/style.css
@@ -331,6 +331,65 @@ img.body__bg {
   margin-right: 30px;
 }
 
+.channel-info__block {
+  margin-bottom: 20px;
+}
+
+.channel-info__box {
+  border-bottom: 1px solid #fff;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.channel-info__heading {
+  font-family: Rubik;
+  font-size: 20px;
+  opacity: 0.7;
+}
+
+.channel-info__text {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  margin-left: 10px;
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.social__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: #48729e;
+  background-color: #fff;
+  padding-right: 5px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.social__icon:hover {
+  color: #fff;
+  background-color: #48729e;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.fa-vk::before {
+  content: "\f189";
+  font-family: FontAwesome;
+}
+
 .wrap-player {
   display: -webkit-box;
   display: -ms-flexbox;
