--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -37,35 +37,50 @@
       background-size: cover;
       margin-right: 30px;
    }
+   &__block {
+      margin-bottom: 20px;
+   }
+   &__box {
+      border-bottom: 1px solid #fff;
+      padding-bottom: 10px;
+      margin-bottom: 20px;
+   }
+   &__heading {
+      font-family: Rubik;
+      font-size: 20px;
+      opacity: 0.7;
+   }
+   &__text {
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      margin-left: 10px;
+   }
 }
 
-// .channel-info {
-//    flex: 0 1 45%;
-//    text-align: center;
-//    &__img {
-//       width: 400px;
-//       height: 400px;
-//       background-size: cover;
-//       border-radius: 50%;
-//       margin: 0 auto;
-//    }
-//    &__icon {
-//       vertical-align: baseline;
-//    }
-// }
-// .player {
-//    flex: 0 1 50%;
-//    &__title {
-//       font-family: "Rubik", sans-serif;
-//       font-size: 150px;
-//       line-height: 1;
-//       margin: 0 0 45px 0;
-//       text-align: center;
-//    }
-//    &__radio {
-//       font-size: 130px;
-//    }
-// }
+.social {
+   display: flex;
+   &__icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      color: #48729e;
+      background-color: #fff;
+      padding-right: 5px;
+      transition: 0.3s;
+      &:hover {
+         color: #fff;
+         background-color: #48729e;
+         transition: 0.3s;
+      }
+   }
+}
+
+.fa-vk::before {
+   content: "\f189";
+   font-family: FontAwesome;
+}
 
 .wrap-player {
    display: flex;
