--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -108,3 +108,9 @@
    top: 17px !important;
    width: 70px !important;
 }
+
+.wrap-my_player {
+   display: flex;
+   align-items: center;
+   margin-bottom: 20px;
+}
