--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,9 @@ h6 {
 body {
   font-size: 20px;
   line-height: 150%;
-  background: #333 url(../img/new-bg-5.jpg) 0 0/cover no-repeat fixed;
+  background: #333 url(../img/new-bg.jpg) 0 0/cover no-repeat fixed;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  color: #fff;
+  color: #00b416;
 }
 
 img.body__bg {
@@ -420,6 +420,16 @@ img.body__bg {
 .my_player_default .my_volumediv {
   top: 17px !important;
   width: 70px !important;
+}
+
+.wrap-my_player {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
 }
 
 .footer {
