--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,9 +2,9 @@
 body {
 	font-size: 20px;
 	line-height: 150%;
-	background: #333 url(../img/new-bg-5.jpg) 0 0 / cover no-repeat fixed;
+	background: #333 url(../img/new-bg.jpg) 0 0 / cover no-repeat fixed;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	color: #fff;
+	color: #00b416;
 }
 
 img.body__bg {
@@ -16,16 +16,6 @@ img.body__bg {
 	object-fit: cover;
 	object-position: top;
 }
-
-//.wrapper {
-// background-image: linear-gradient(to bottom right, #200354, #a720c2, #17014c);
-// 	width: 100%;
-// 	min-height: 100%;
-// 	overflow: hidden;
-// 	display: flex;
-// 	flex-direction: column;
-// 	justify-content: space-between;
-// }
 
 .container {
 	max-width: 1170px;
