--- a/css/style.css
+++ b/css/style.css
@@ -372,8 +372,9 @@ img.body__bg {
   height: 40px;
   border-radius: 50%;
   color: #48729e;
-  background-color: #fff;
+  background-color: #ebba16;
   padding-right: 5px;
+  margin-left: 20px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -399,29 +400,6 @@ img.body__bg {
           justify-content: center;
 }
 
-.my_player_default {
-  height: 40px !important;
-  width: 300px !important;
-}
-
-.my_player_default .my_play {
-  top: 12px !important;
-}
-
-.my_player_default .my_timer {
-  top: 15px !important;
-}
-
-.my_player_default .my_mute {
-  right: 90px !important;
-  top: 13px !important;
-}
-
-.my_player_default .my_volumediv {
-  top: 17px !important;
-  width: 70px !important;
-}
-
 .wrap-my_player {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -430,6 +408,97 @@ img.body__bg {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 20px;
+}
+
+.wrap-bottom__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.wrap-bottom__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.channel-descr {
+  padding: 50px 0;
+}
+
+.channel-descr__text {
+  margin-top: 30px;
+  max-width: 80%;
+}
+
+.history__song {
+  min-width: 80%;
+  padding-bottom: 50px;
+}
+
+.history__title {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.history__singl {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.history__singl-img {
+  width: 170px;
+  height: 170px;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+.history__singl-link {
+  color: #ebba16;
+  font-size: 16px;
+}
+
+.history__singl-link:hover {
+  text-decoration: underline;
+}
+
+.my_lastsongs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.my_songdivs {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 20%;
+          flex: 0 1 20%;
+  padding-right: 40px;
+  margin-bottom: 25px;
+}
+
+.my_player_adaptive {
+  background: #ebba16 !important;
+  max-width: 1170px;
+  margin: 0 auto;
+  top: auto;
+  right: 0;
+}
+
+.my_player_adaptive .my_timer {
+  color: #0c1b18 !important;
 }
 
 .footer {
