--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,8 @@ img.body__bg {
 }
 
 .header {
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   width: 100%;
   top: 0;
   left: 0;
@@ -280,9 +281,9 @@ img.body__bg {
 }
 
 .wrap-radio {
+  max-width: 1170px;
   background: #000000b8;
-  padding: 150px 10px 0 10px;
-  margin-top: 100px;
+  margin: 100px auto;
   border-radius: 10px;
 }
 
@@ -300,6 +301,7 @@ img.body__bg {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 50px;
+  padding-top: 50px;
 }
 
 .channel-info__top-img {
