--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -124,7 +124,7 @@
 		height: 100%;
 		overflow: auto;
 		transition: all 0.3s ease 0s;
-		background-color: #a720c2;
+		background-color: #373018;
 		padding: 70px 10px 20px 10px;
 	}
 
@@ -140,5 +140,6 @@
 	}
 	.header__link {
 		font-size: 24px;
+		color: #01f914;
 	}
 }
