--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -13,7 +13,7 @@
       margin-bottom: 50px;
       padding-top: 50px;
       &-img {
-         width: 80px;
+         flex: 0 0 80px;
          height: 80px;
          border-radius: 5px;
          background-size: cover;
@@ -32,7 +32,7 @@
       opacity: 0.7;
    }
    &__img {
-      width: 300px;
+      flex: 0 0 300px;
       height: 300px;
       border-radius: 5px;
       background-size: cover;
