--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -48,12 +48,12 @@
 	margin: 0px 0px 0px 20px;
 }
 .header__link {
-	color: #fff;
+	color: #00b416;
 	font-size: 18px;
 	text-decoration: none;
 	transition: 0.3s;
 	&:hover {
-		color: #a31fbf;
+		color: #ebba16;
 		transition: 0.3s;
 	}
 }
