--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -18,6 +18,9 @@
          border-radius: 5px;
          background-size: cover;
          margin-right: 15px;
+         & > img {
+            max-width: 100%;
+         }
       }
    }
    &__title {
@@ -52,7 +55,7 @@
       opacity: 0.7;
    }
    &__text {
-      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      font-family: Montserrat, Arial, "Helvetica Neue", Helvetica, sans-serif;
       margin-left: 10px;
    }
 }
@@ -111,9 +114,14 @@
 .channel-descr {
    padding: 50px 0;
    &__text {
-      color: #fff;
+      font-family: Montserrat;
+      color: #ebba16;
       margin-top: 30px;
       max-width: 80%;
+   }
+   &__bold {
+      font-family: Rubik;
+      color: #058714;
    }
 }
 
