--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -48,6 +48,20 @@
          }
          &__subtitle {
             font-size: 16px;
+            width: 250px;
+         }
+      }
+      &-descr {
+         &__text {
+            font-size: 18px;
+         }
+      }
+   }
+   .history {
+      &__singl {
+         &-img {
+            width: 110px;
+            height: 110px;
          }
       }
    }
