--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@ body {
 	font-size: 20px;
 	line-height: 150%;
 	background: #333 url(../img/new-bg.jpg) 0 0 / cover no-repeat fixed;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-family: Montserrat, Arial, "Helvetica Neue", Helvetica, sans-serif;
 	color: #00b416;
 }
 
