--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,32 @@ img.body__bg {
   margin-left: 10px;
 }
 
+.channel-info__block-radio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 20px;
+}
+
+.btn {
+  display: block;
+  background: #272727;
+  color: #ebba16;
+  padding: 3px 10px;
+}
+
+.btn:last-child {
+  margin-left: 5px;
+}
+
+.btn:hover {
+  color: #673476;
+}
+
+.btn:active {
+  color: cornflowerblue;
+}
+
 .social {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -546,6 +572,15 @@ img.body__bg {
 @media (max-width: 991.98px) {
   .channel-descr__text {
     min-width: 100%;
+  }
+  .channel-info__block-radio {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .btn {
+    margin-bottom: 5px;
   }
 }
 
