--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -60,6 +60,27 @@
    }
 }
 
+.channel-info__block-radio {
+   display: flex;
+   margin-left: 20px;
+}
+
+.btn {
+   display: block;
+   background: #272727;
+   color: #ebba16;
+   padding: 3px 10px;
+   &:last-child {
+      margin-left: 5px;
+   }
+   &:hover {
+      color: #673476;
+   }
+   &:active {
+      color: cornflowerblue;
+   }
+}
+
 .social {
    display: flex;
    &__icon {
