--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -22,6 +22,12 @@
          }
       }
    }
+   .channel-info__block-radio {
+      flex-direction: column;
+   }
+   .btn {
+      margin-bottom: 5px;
+   }
 }
 
 @media (max-width: 767.98px) {
