Написан HTML выподающего меню

--- a/css/style.css
+++ b/css/style.css
@@ -545,6 +545,21 @@ img.body__bg {
   color: #0c1b18 !important;
 }
 
+.nav__radio--title {
+  background: #00b831;
+  color: #fff;
+  padding: 5px 20px 5px 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 2px;
+}
+
+.nav__radio li {
+  position: relative;
+}
+
 @media (max-width: 1069px) {
   .my_songdivs {
     -webkit-box-flex: 0;
