--- a/css/style.css
+++ b/css/style.css
@@ -546,18 +546,76 @@ img.body__bg {
 }
 
 .nav__radio--title {
-  background: #00b831;
+  background: #00b831ab;
   color: #fff;
-  padding: 5px 20px 5px 10px;
-  border-radius: 5px;
+  padding: 5px 93px 5px 10px;
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 600;
   letter-spacing: 2px;
+  position: relative;
+}
+
+.nav__radio--title::after {
+  content: "";
+  background: #fff;
+  position: absolute;
+  top: 6px;
+  right: 35px;
+  width: 1px;
+  height: 17px;
 }
 
 .nav__radio li {
   position: relative;
+}
+
+.sub-nav__radio {
+  display: none;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  background-color: #2727279e;
+}
+
+.sub-nav__radio > li:hover {
+  background: #263339;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.sub-nav__radio--link {
+  display: inline-block;
+  color: #00b416;
+  padding: 5px 10px;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.nav__active {
+  display: block;
+}
+
+.arrow {
+  position: absolute;
+  top: 13px;
+  right: 8px;
+  width: 0;
+  height: 0;
+  border-top: 10px solid #fff;
+  border-right: 10px solid rgba(255, 255, 255, 0);
+  border-left: 10px solid rgba(255, 255, 255, 0);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.arrow__active {
+  -webkit-transform: rotateX(180deg);
+          transform: rotateX(180deg);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 @media (max-width: 1069px) {
