--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,8 @@ img.body__bg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -647,13 +649,11 @@ img.body__bg {
     min-width: 100%;
   }
   .channel-info__block-radio {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .btn {
-    margin-bottom: 5px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    margin-left: 0;
+    margin-top: 20px;
   }
 }
 
@@ -670,6 +670,12 @@ img.body__bg {
   .channel-info__img {
     width: 300px;
     margin-bottom: 20px;
+  }
+  .channel-info__block-title {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    margin-top: 20px;
   }
 }
 
