--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -9,6 +9,7 @@
    display: flex;
    &__top {
       display: flex;
+      flex-wrap: wrap;
       align-items: center;
       margin-bottom: 50px;
       padding-top: 50px;
